<resources>
    <string name="app_name">Auroranite</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create account?</string>
    <string name="app_logo">App logo</string>
    <string name="profile_photo">Profile photo</string>
    <string name="name">Name</string>
    <string name="education">Education</string>
    <string name="major_field_of_study">Major field of study</string>
    <string name="graduation_year">Graduation Year</string>
    <string name="country">Country</string>
    <string name="skills">Skills (separated by commas)</string>
    <string name="experience">Experience (separated by commas)</string>
    <string name="salary_expectation">Salary Expectation (in ₹)</string>
    <string name="preferred_mode">Preferred mode:</string>
    <string name="create">Create</string>
    <string name="re_enter_password">Re-enter password</string>

    <string-array name="work_mode">
        <item>Part-time</item>
        <item>Full-time</item>
    </string-array>

    <string name="profile_settings">Profile settings</string>
    <string name="jobs">Jobs</string>
    <string name="learn">Learn</string>
    <string name="apply_now">Apply now</string>
    <string name="favourite">Favourite</string>
    <string name="create_account_">Create Account</string>
    <string name="sign_out">Sign out</string>
    <string name="filter_jobs">Filter Jobs:</string>
    <string name="update">Update</string>
    <string name="powered_by">Powered by</string>
    <string name="alan_logo">Alan logo</string>
    <string name="icon">Icon</string>
    <string name="credit">Credit:</string>
    <string name="go_to_course">Go to course</string>

    <string-array name="tags">
        <item>Java </item>
        <item>JavaScript </item>
        <item>Python </item>
        <item>C </item>
        <item>C++ </item>
        <item>HTML </item>
        <item>CSS </item>
    </string-array>

    <string-array name="credits">
        <item>Telusko</item>
        <item>Telusko</item>
        <item>Programiz</item>
        <item>Neso Academy</item>
        <item>Neso Academy</item>
        <item>Dani Krossing</item>
        <item>Dani Krossing</item>
    </string-array>

    <string-array name="playlist_links">
        <item>https://www.youtube.com/playlist?list=PLsyeobzWxl7pSqMzPF_SlvQ0IdcGA-XI2</item>
        <item>https://www.youtube.com/playlist?list=PLsyeobzWxl7rrvgG7MLNIMSTzVCDZZcT4</item>
        <item>https://www.youtube.com/playlist?list=PL98qAXLA6afuh50qD2MdAj3ofYjZR_Phn</item>
        <item>https://www.youtube.com/playlist?list=PLBlnK6fEyqRggZZgYpPMUxdY1CYkZtARR</item>
        <item>https://www.youtube.com/playlist?list=PLBlnK6fEyqRh6isJ01MBnbNpV3ZsktSyS</item>
        <item>https://www.youtube.com/playlist?list=PL0eyrZgxdwhwNC5ppZo_dYGVjerQY3xYU</item>
        <item>https://www.youtube.com/playlist?list=PL0eyrZgxdwhwNC5ppZo_dYGVjerQY3xYU</item>
    </string-array>

    <string-array name="job_filter">
        <item>Relevant</item>
        <item>All</item>
    </string-array>
</resources>