<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    tools:context=".Activities.CreateAccount">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_photo_su"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/profile_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_account_circle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_til_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="30dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_photo_su">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_et_su"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textShortMessage|textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_til_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_til_su">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_et_su"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_til_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_til_su"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_et_su"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rep_password_til_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_til_su"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rep_password_et_su"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/re_enter_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/education_til_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rep_password_til_su">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/education_et_su"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/education"
                    android:inputType="textShortMessage|textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/major_til_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/education_til_su">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/major_et_su"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/major_field_of_study"
                    android:inputType="textCapWords|textShortMessage" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/grad_year_til_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/major_til_su">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/grad_year_et_su"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/graduation_year"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/country_til_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/grad_year_til_su">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/country_et_su"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country"
                    android:inputType="textShortMessage|textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/skills_til_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/country_til_su">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/skills_et_su"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/skills"
                    android:inputType="textLongMessage|textCapWords"
                    android:maxLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/experience_til_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/skills_til_su">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/exp_et_su"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/experience"
                    android:inputType="textCapSentences|textLongMessage"
                    android:maxLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/salary_exp_til_su"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/experience_til_su">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/salary_et_su"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/salary_expectation"
                    android:inputType="numberSigned" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/preferred_mode"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/salary_exp_til_su" />

            <Spinner
                android:id="@+id/spinner_preferred_mode_su"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:entries="@array/work_mode"
                app:layout_constraintEnd_toEndOf="@id/salary_exp_til_su"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <Button
                android:id="@+id/create_btn_su"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/create"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_preferred_mode_su" />

            <ProgressBar
                android:id="@+id/progress_bar_sign_up"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/create_btn_su"
                app:layout_constraintStart_toEndOf="@+id/create_btn_su"
                app:layout_constraintTop_toTopOf="@+id/create_btn_su" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>